<resources>
    <string name="app_name">Bootcamplayout</string>
    <string name="raound_up_total">Raound Up Total?</string>
    <string name="calculate_vat">CALCULATE VAT</string>
    <string name="_20">20%</string>
    <string name="_15">15%</string>
    <string name="_10">10%</string>
    <string name="select_vat_percentage">Select VAT Percentage:</string>
    <string name="coast_or_total_price">Coast or Total Price</string>
</resources>